--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
         <div class="sliderWrapper">
             <div class="sliderItem">
                 <img src="./img/air.png" alt="" class="sliderImg">
-                <div class="sliderBg"></div>
-                <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
+                <div class="sliderBg"></div>>
                 <h2 class="sliderPrice">$119</h2>
+                <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
+                
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -48,8 +49,9 @@
             <div class="sliderItem">
                 <img src="./img/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">BLAZER</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">$109</h2>
+                <h1 class="sliderTitle">BLAZER</br> NEW</br> SEASON</h1>
+
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
